--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sport betting and prediction ticketing",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node dist/server.js",
     "build": "tsc -p .",
     "start:dev": "nodemon src/server.ts",
     "test": "jest app.js"
@@ -14,5 +14,20 @@
     "'betting']"
   ],
   "author": "Arekhandia Harry",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2"
+  }
 }
